Chapter 11 — Listing 11.9: ExecutorCompletionServiceExample.java Demonstrates: processing task results in completion order using ExecutorCompletionService